remove value track number

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<li id="li_1" >
 		<label class="description" for="item_1">Трек-номер </label>
 		<div>
-			<input name="PostId" class="item text medium" type="text" maxlength="255" value="RB945960872HK"/> 
+			<input name="PostId" class="item text medium" type="text" maxlength="255" value=""/> 
 		</div> 
 		</li>		<li id="li_2" >
 		<label class="description" for="Recipient">ФИО или наименование организации </label>
