--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -8,6 +7,20 @@
 <body>
 
 		<h1><a>Post notice form</a></h1>
+		<ul>
+			Как пользоваться:
+			
+			<li>Один раз заполнить форму и нажать submit
+			</li>
+                       <li>Сохранить в закладки браузера URL (сохранятся все данные формы)
+                        </li>
+                       <li>Теперь каждый раз остается только перейти по закладке в браузере
+                        </li>
+                       <li>Вставить новый трекинг номер
+                        </li>		
+                       <li>Скачать pdf, распечатать, вписать дату и расписаться
+                        </li>
+		</ul>
 		<form method="get" action="https://www.pochta.ru/form">
 			<input name="type" class="item text medium" type="hidden" maxlength="255" value="F22"/>
 			<ul >
